[update] collision: simplified 2seg equation

--- a/collision_equation/collision_equation.tex
+++ b/collision_equation/collision_equation.tex
@@ -266,35 +266,34 @@ COMING SOON.
 \clearpage
 \tiny
 \begin{align*}
-  & \alpha_1 = & &
-  \\
+  \alpha_1 =
   &\,\tau _{1} & &
   \\
     & &\times &
-    \Bigg(2\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,m_{2}+2\,{l_{\mathrm{MCD},2}}^2\,m_{1}\,{m_{2}}^2+2\,I_{2}\,{m_{1}}^2+4\,I_{2}\,m_{1}\,m_{2}+2\,I_{2}\,{m_{2}}^2\Bigg)
+    \Bigg(2\,{L_2}^2\,{m_{1}}^2\,m_{2}+2\,{L_2}^2\,m_{1}\,{m_{2}}^2+2\,I_{2}\,{m_{1}}^2+4\,I_{2}\,m_{1}\,m_{2}+2\,I_{2}\,{m_{2}}^2\Bigg)
     \\
     & & &\Bigg/ 
     \Bigg(
       2\,I_{1}\,I_{2}\,{m_{1}}^2+
       2\,I_{1}\,I_{2}\,{m_{2}}^2+
-      {l_{1}}^2\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2+
-      {l_{\mathrm{MCD},1}}^2\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2+
-      2\,I_{2}\,{l_{1}}^2\,m_{1}\,{m_{2}}^2+
-      2\,I_{2}\,{l_{1}}^2\,{m_{1}}^2\,m_{2}
+      {\ell_{1}}^2\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2+
+      {L_1}^2\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2+
+      2\,I_{2}\,{\ell_{1}}^2\,m_{1}\,{m_{2}}^2+
+      2\,I_{2}\,{\ell_{1}}^2\,{m_{1}}^2\,m_{2}
       \\ & & &+
-      2\,I_{1}\,{l_{\mathrm{MCD},2}}^2\,m_{1}\,{m_{2}}^2+
-      2\,I_{1}\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,m_{2}+
-      2\,I_{2}\,{l_{\mathrm{MCD},1}}^2\,m_{1}\,{m_{2}}^2+
-      2\,I_{2}\,{l_{\mathrm{MCD},1}}^2\,{m_{1}}^2\,m_{2}
+      2\,I_{1}\,{L_2}^2\,m_{1}\,{m_{2}}^2+
+      2\,I_{1}\,{L_2}^2\,{m_{1}}^2\,m_{2}+
+      2\,I_{2}\,{L_1}^2\,m_{1}\,{m_{2}}^2+
+      2\,I_{2}\,{L_1}^2\,{m_{1}}^2\,m_{2}
       \\ & & &+
       4\,I_{1}\,I_{2}\,m_{1}\,m_{2}-
-      2\,l_{1}\,l_{\mathrm{MCD},1}\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2-
-      4\,I_{2}\,l_{1}\,l_{\mathrm{MCD},1}\,m_{1}\,{m_{2}}^2-
-      4\,I_{2}\,l_{1}\,l_{\mathrm{MCD},1}\,{m_{1}}^2\,m_{2}
+      2\,\ell_{1}\,L_1\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2-
+      4\,I_{2}\,\ell_{1}\,L_1\,m_{1}\,{m_{2}}^2-
+      4\,I_{2}\,\ell_{1}\,L_1\,{m_{1}}^2\,m_{2}
       \\ & & &-
-      {l_{1}}^2\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2\,\cos\left(2\,\mathrm{th}_{2}\right)-
-      {l_{\mathrm{MCD},1}}^2\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2\,\cos\left(2\,\mathrm{th}_{2}\right)+
-      2\,l_{1}\,l_{\mathrm{MCD},1}\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2\,\cos\left(2\,\mathrm{th}_{2}\right)
+      {\ell_{1}}^2\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2\,\cos\left(2\,\theta_2\right)-
+      {L_1}^2\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2\,\cos\left(2\,\theta_2\right)+
+      2\,\ell_{1}\,L_1\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2\,\cos\left(2\,\theta_2\right)
     \Bigg)
   \\
   &-\,\tau _{2} & &
@@ -303,180 +302,180 @@ COMING SOON.
     \Bigg(
       2\,I_{2}\,{m_{1}}^2+
       2\,I_{2}\,{m_{2}}^2+
-      2\,{l_{\mathrm{MCD},2}}^2\,m_{1}\,{m_{2}}^2+
-      2\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,m_{2}+
+      2\,{L_2}^2\,m_{1}\,{m_{2}}^2+
+      2\,{L_2}^2\,{m_{1}}^2\,m_{2}+
       4\,I_{2}\,m_{1}\,m_{2}+
-      2\,l_{1}\,l_{\mathrm{MCD},2}\,m_{1}\,{m_{2}}^2\,\cos\left(\mathrm{th}_{2}\right)
+      2\,\ell_{1}\,L_2\,m_{1}\,{m_{2}}^2\,\cos\left(\theta_2\right)
       \\ & & &+
-      2\,l_{1}\,l_{\mathrm{MCD},2}\,{m_{1}}^2\,m_{2}\,\cos\left(\mathrm{th}_{2}\right)-
-      2\,l_{\mathrm{MCD},1}\,l_{\mathrm{MCD},2}\,m_{1}\,{m_{2}}^2\,\cos\left(\mathrm{th}_{2}\right)-
-      2\,l_{\mathrm{MCD},1}\,l_{\mathrm{MCD},2}\,{m_{1}}^2\,m_{2}\,\cos\left(\mathrm{th}_{2}\right)
+      2\,\ell_{1}\,L_2\,{m_{1}}^2\,m_{2}\,\cos\left(\theta_2\right)-
+      2\,L_1\,L_2\,m_{1}\,{m_{2}}^2\,\cos\left(\theta_2\right)-
+      2\,L_1\,L_2\,{m_{1}}^2\,m_{2}\,\cos\left(\theta_2\right)
     \Bigg)
     \\
     & & &\Bigg/
     \Bigg(
       2\,I_{1}\,I_{2}\,{m_{1}}^2+
       2\,I_{1}\,I_{2}\,{m_{2}}^2+
-      {l_{1}}^2\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2+
-      {l_{\mathrm{MCD},1}}^2\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2+
-      2\,I_{2}\,{l_{1}}^2\,m_{1}\,{m_{2}}^2
+      {\ell_{1}}^2\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2+
+      {L_1}^2\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2+
+      2\,I_{2}\,{\ell_{1}}^2\,m_{1}\,{m_{2}}^2
       \\ & & &+
-      2\,I_{2}\,{l_{1}}^2\,{m_{1}}^2\,m_{2}+
-      2\,I_{1}\,{l_{\mathrm{MCD},2}}^2\,m_{1}\,{m_{2}}^2+
-      2\,I_{1}\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,m_{2}+
-      2\,I_{2}\,{l_{\mathrm{MCD},1}}^2\,m_{1}\,{m_{2}}^2+
-      2\,I_{2}\,{l_{\mathrm{MCD},1}}^2\,{m_{1}}^2\,m_{2}
+      2\,I_{2}\,{\ell_{1}}^2\,{m_{1}}^2\,m_{2}+
+      2\,I_{1}\,{L_2}^2\,m_{1}\,{m_{2}}^2+
+      2\,I_{1}\,{L_2}^2\,{m_{1}}^2\,m_{2}+
+      2\,I_{2}\,{L_1}^2\,m_{1}\,{m_{2}}^2+
+      2\,I_{2}\,{L_1}^2\,{m_{1}}^2\,m_{2}
       \\ & & &+
       4\,I_{1}\,I_{2}\,m_{1}\,m_{2}-
-      2\,l_{1}\,l_{\mathrm{MCD},1}\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2-
-      4\,I_{2}\,l_{1}\,l_{\mathrm{MCD},1}\,m_{1}\,{m_{2}}^2-
-      4\,I_{2}\,l_{1}\,l_{\mathrm{MCD},1}\,{m_{1}}^2\,m_{2}
+      2\,\ell_{1}\,L_1\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2-
+      4\,I_{2}\,\ell_{1}\,L_1\,m_{1}\,{m_{2}}^2-
+      4\,I_{2}\,\ell_{1}\,L_1\,{m_{1}}^2\,m_{2}
       \\ & & &-
-      {l_{1}}^2\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2\,\cos\left(2\,\mathrm{th}_{2}\right)-
-      {l_{\mathrm{MCD},1}}^2\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2\,\cos\left(2\,\mathrm{th}_{2}\right)+
-      2\,l_{1}\,l_{\mathrm{MCD},1}\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2\,\cos\left(2\,\mathrm{th}_{2}\right)
+      {\ell_{1}}^2\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2\,\cos\left(2\,\theta_2\right)-
+      {L_1}^2\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2\,\cos\left(2\,\theta_2\right)+
+      2\,\ell_{1}\,L_1\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2\,\cos\left(2\,\theta_2\right)
     \Bigg)
   \\
   & +\,\mathrm{Fx} & &
   \\
     & & \times &
     \Bigg(
-      2\,I_{2}\,l_{1}\,{m_{2}}^2\,\sin\left(\mathrm{th}_{1}\right)+
-      2\,I_{2}\,l_{\mathrm{MCD},1}\,{m_{1}}^2\,\sin\left(\mathrm{th}_{1}\right)+
-      l_{1}\,{l_{\mathrm{MCD},2}}^2\,m_{1}\,{m_{2}}^2\,\sin\left(\mathrm{th}_{1}\right)+
-      l_{\mathrm{MCD},1}\,{l_{\mathrm{MCD},2}}^2\,m_{1}\,{m_{2}}^2\,\sin\left(\mathrm{th}_{1}\right)
+      2\,I_{2}\,\ell_{1}\,{m_{2}}^2\,\sin\left(\theta_1\right)+
+      2\,I_{2}\,L_1\,{m_{1}}^2\,\sin\left(\theta_1\right)+
+      \ell_{1}\,{L_2}^2\,m_{1}\,{m_{2}}^2\,\sin\left(\theta_1\right)+
+      L_1\,{L_2}^2\,m_{1}\,{m_{2}}^2\,\sin\left(\theta_1\right)
       \\ & & &+
-      2\,l_{\mathrm{MCD},1}\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,m_{2}\,\sin\left(\mathrm{th}_{1}\right)+
-      2\,I_{2}\,l_{1}\,m_{1}\,m_{2}\,\sin\left(\mathrm{th}_{1}\right)+
-      2\,I_{2}\,l_{\mathrm{MCD},1}\,m_{1}\,m_{2}\,\sin\left(\mathrm{th}_{1}\right)
+      2\,L_1\,{L_2}^2\,{m_{1}}^2\,m_{2}\,\sin\left(\theta_1\right)+
+      2\,I_{2}\,\ell_{1}\,m_{1}\,m_{2}\,\sin\left(\theta_1\right)+
+      2\,I_{2}\,L_1\,m_{1}\,m_{2}\,\sin\left(\theta_1\right)
       \\ & & &-
-      l_{1}\,{l_{\mathrm{MCD},2}}^2\,m_{1}\,{m_{2}}^2\,\sin\left(\mathrm{th}_{1}+
-      2\,\mathrm{th}_{2}\right)+
-      l_{\mathrm{MCD},1}\,{l_{\mathrm{MCD},2}}^2\,m_{1}\,{m_{2}}^2\,\sin\left(\mathrm{th}_{1}+
-      2\,\mathrm{th}_{2}\right)
+      \ell_{1}\,{L_2}^2\,m_{1}\,{m_{2}}^2\,\sin\left(\theta_1+
+      2\,\theta_2\right)+
+      L_1\,{L_2}^2\,m_{1}\,{m_{2}}^2\,\sin\left(\theta_1+
+      2\,\theta_2\right)
     \Bigg)
     \\
     & & &\Bigg/
     \Bigg(
       2\,I_{1}\,I_{2}\,{m_{1}}^2+
       2\,I_{1}\,I_{2}\,{m_{2}}^2+
-      {l_{1}}^2\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2+
-      {l_{\mathrm{MCD},1}}^2\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2
+      {\ell_{1}}^2\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2+
+      {L_1}^2\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2
       \\ & & &+
-      2\,I_{2}\,{l_{1}}^2\,m_{1}\,{m_{2}}^2+
-      2\,I_{2}\,{l_{1}}^2\,{m_{1}}^2\,m_{2}+
-      2\,I_{1}\,{l_{\mathrm{MCD},2}}^2\,m_{1}\,{m_{2}}^2+
-      2\,I_{1}\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,m_{2}+
-      2\,I_{2}\,{l_{\mathrm{MCD},1}}^2\,m_{1}\,{m_{2}}^2
+      2\,I_{2}\,{\ell_{1}}^2\,m_{1}\,{m_{2}}^2+
+      2\,I_{2}\,{\ell_{1}}^2\,{m_{1}}^2\,m_{2}+
+      2\,I_{1}\,{L_2}^2\,m_{1}\,{m_{2}}^2+
+      2\,I_{1}\,{L_2}^2\,{m_{1}}^2\,m_{2}+
+      2\,I_{2}\,{L_1}^2\,m_{1}\,{m_{2}}^2
       \\ & & &+
-      2\,I_{2}\,{l_{\mathrm{MCD},1}}^2\,{m_{1}}^2\,m_{2}+
+      2\,I_{2}\,{L_1}^2\,{m_{1}}^2\,m_{2}+
       4\,I_{1}\,I_{2}\,m_{1}\,m_{2}-
-      2\,l_{1}\,l_{\mathrm{MCD},1}\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2-
-      4\,I_{2}\,l_{1}\,l_{\mathrm{MCD},1}\,m_{1}\,{m_{2}}^2-
-      4\,I_{2}\,l_{1}\,l_{\mathrm{MCD},1}\,{m_{1}}^2\,m_{2}
+      2\,\ell_{1}\,L_1\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2-
+      4\,I_{2}\,\ell_{1}\,L_1\,m_{1}\,{m_{2}}^2-
+      4\,I_{2}\,\ell_{1}\,L_1\,{m_{1}}^2\,m_{2}
       \\ & & &-
-      {l_{1}}^2\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2\,\cos\left(2\,\mathrm{th}_{2}\right)-
-      {l_{\mathrm{MCD},1}}^2\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2\,\cos\left(2\,\mathrm{th}_{2}\right)+
-      2\,l_{1}\,l_{\mathrm{MCD},1}\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2\,\cos\left(2\,\mathrm{th}_{2}\right)
+      {\ell_{1}}^2\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2\,\cos\left(2\,\theta_2\right)-
+      {L_1}^2\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2\,\cos\left(2\,\theta_2\right)+
+      2\,\ell_{1}\,L_1\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2\,\cos\left(2\,\theta_2\right)
     \Bigg)
   \\
   & -\,\mathrm{Fy} & &
   \\
     & & \times &
     \Bigg(
-        2\,I_{2}\,l_{1}\,{m_{2}}^2\,\cos\left(\mathrm{th}_{1}\right)+
-        2\,I_{2}\,l_{\mathrm{MCD},1}\,{m_{1}}^2\,\cos\left(\mathrm{th}_{1}\right)+
-        l_{1}\,{l_{\mathrm{MCD},2}}^2\,m_{1}\,{m_{2}}^2\,\cos\left(\mathrm{th}_{1}\right)
+        2\,I_{2}\,\ell_{1}\,{m_{2}}^2\,\cos\left(\theta_1\right)+
+        2\,I_{2}\,L_1\,{m_{1}}^2\,\cos\left(\theta_1\right)+
+        \ell_{1}\,{L_2}^2\,m_{1}\,{m_{2}}^2\,\cos\left(\theta_1\right)
         \\ & & &+
-        l_{\mathrm{MCD},1}\,{l_{\mathrm{MCD},2}}^2\,m_{1}\,{m_{2}}^2\,\cos\left(\mathrm{th}_{1}\right)+
-        2\,l_{\mathrm{MCD},1}\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,m_{2}\,\cos\left(\mathrm{th}_{1}\right)+
-        2\,I_{2}\,l_{1}\,m_{1}\,m_{2}\,\cos\left(\mathrm{th}_{1}\right)
+        L_1\,{L_2}^2\,m_{1}\,{m_{2}}^2\,\cos\left(\theta_1\right)+
+        2\,L_1\,{L_2}^2\,{m_{1}}^2\,m_{2}\,\cos\left(\theta_1\right)+
+        2\,I_{2}\,\ell_{1}\,m_{1}\,m_{2}\,\cos\left(\theta_1\right)
         \\ & & &+
-        2\,I_{2}\,l_{\mathrm{MCD},1}\,m_{1}\,m_{2}\,\cos\left(\mathrm{th}_{1}\right)-
-        l_{1}\,{l_{\mathrm{MCD},2}}^2\,m_{1}\,{m_{2}}^2\,\cos\left(\mathrm{th}_{1}+
-        2\,\mathrm{th}_{2}\right)+
-        l_{\mathrm{MCD},1}\,{l_{\mathrm{MCD},2}}^2\,m_{1}\,{m_{2}}^2\,\cos\left(\mathrm{th}_{1}+
-        2\,\mathrm{th}_{2}\right)
+        2\,I_{2}\,L_1\,m_{1}\,m_{2}\,\cos\left(\theta_1\right)-
+        \ell_{1}\,{L_2}^2\,m_{1}\,{m_{2}}^2\,\cos\left(\theta_1+
+        2\,\theta_2\right)+
+        L_1\,{L_2}^2\,m_{1}\,{m_{2}}^2\,\cos\left(\theta_1+
+        2\,\theta_2\right)
     \Bigg)
     \\
     & & &\Bigg/ 
     \Bigg(
       2\,I_{1}\,I_{2}\,{m_{1}}^2+
       2\,I_{1}\,I_{2}\,{m_{2}}^2+
-      {l_{1}}^2\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2+
-      {l_{\mathrm{MCD},1}}^2\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2
+      {\ell_{1}}^2\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2+
+      {L_1}^2\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2
       \\ & & &+
-      2\,I_{2}\,{l_{1}}^2\,m_{1}\,{m_{2}}^2+
-      2\,I_{2}\,{l_{1}}^2\,{m_{1}}^2\,m_{2}+
-      2\,I_{1}\,{l_{\mathrm{MCD},2}}^2\,m_{1}\,{m_{2}}^2+
-      2\,I_{1}\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,m_{2}+
-      2\,I_{2}\,{l_{\mathrm{MCD},1}}^2\,m_{1}\,{m_{2}}^2
+      2\,I_{2}\,{\ell_{1}}^2\,m_{1}\,{m_{2}}^2+
+      2\,I_{2}\,{\ell_{1}}^2\,{m_{1}}^2\,m_{2}+
+      2\,I_{1}\,{L_2}^2\,m_{1}\,{m_{2}}^2+
+      2\,I_{1}\,{L_2}^2\,{m_{1}}^2\,m_{2}+
+      2\,I_{2}\,{L_1}^2\,m_{1}\,{m_{2}}^2
       \\ & & &+
-      2\,I_{2}\,{l_{\mathrm{MCD},1}}^2\,{m_{1}}^2\,m_{2}+
+      2\,I_{2}\,{L_1}^2\,{m_{1}}^2\,m_{2}+
       4\,I_{1}\,I_{2}\,m_{1}\,m_{2}-
-      2\,l_{1}\,l_{\mathrm{MCD},1}\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2-
-      4\,I_{2}\,l_{1}\,l_{\mathrm{MCD},1}\,m_{1}\,{m_{2}}^2-
-      4\,I_{2}\,l_{1}\,l_{\mathrm{MCD},1}\,{m_{1}}^2\,m_{2}
+      2\,\ell_{1}\,L_1\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2-
+      4\,I_{2}\,\ell_{1}\,L_1\,m_{1}\,{m_{2}}^2-
+      4\,I_{2}\,\ell_{1}\,L_1\,{m_{1}}^2\,m_{2}
       \\ & & &-
-      {l_{1}}^2\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2\,\cos\left(2\,\mathrm{th}_{2}\right)-
-      {l_{\mathrm{MCD},1}}^2\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2\,\cos\left(2\,\mathrm{th}_{2}\right)+
-      2\,l_{1}\,l_{\mathrm{MCD},1}\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2\,\cos\left(2\,\mathrm{th}_{2}\right)
+      {\ell_{1}}^2\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2\,\cos\left(2\,\theta_2\right)-
+      {L_1}^2\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2\,\cos\left(2\,\theta_2\right)+
+      2\,\ell_{1}\,L_1\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2\,\cos\left(2\,\theta_2\right)
     \Bigg)
   \\
   & + & &
   \\
     & & &\Bigg(
-      \sin\left(2\,\mathrm{th}_{2}\right)\,{l_{1}}^2\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2\,{\omega _{1}}^2-
-      2\,\sin\left(2\,\mathrm{th}_{2}\right)\,l_{1}\,l_{\mathrm{MCD},1}\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2\,{\omega _{1}}^2
+      \sin\left(2\,\theta_2\right)\,{\ell_{1}}^2\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2\,{\omega _{1}}^2-
+      2\,\sin\left(2\,\theta_2\right)\,\ell_{1}\,L_1\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2\,{\omega _{1}}^2
       \\ & & &+
-      2\,\sin\left(\mathrm{th}_{2}\right)\,l_{1}\,{l_{\mathrm{MCD},2}}^3\,{m_{1}}^2\,{m_{2}}^2\,{\omega _{1}}^2+
-      4\,\sin\left(\mathrm{th}_{2}\right)\,l_{1}\,{l_{\mathrm{MCD},2}}^3\,{m_{1}}^2\,{m_{2}}^2\,\omega _{1}\,\omega _{2}+
-      2\,\sin\left(\mathrm{th}_{2}\right)\,l_{1}\,{l_{\mathrm{MCD},2}}^3\,{m_{1}}^2\,{m_{2}}^2\,{\omega _{2}}^2
+      2\,\sin\left(\theta_2\right)\,\ell_{1}\,{L_2}^3\,{m_{1}}^2\,{m_{2}}^2\,{\omega _{1}}^2+
+      4\,\sin\left(\theta_2\right)\,\ell_{1}\,{L_2}^3\,{m_{1}}^2\,{m_{2}}^2\,\omega _{1}\,\omega _{2}+
+      2\,\sin\left(\theta_2\right)\,\ell_{1}\,{L_2}^3\,{m_{1}}^2\,{m_{2}}^2\,{\omega _{2}}^2
       \\ & & &+
-      2\,I_{2}\,\sin\left(\mathrm{th}_{2}\right)\,l_{1}\,l_{\mathrm{MCD},2}\,{m_{1}}^2\,m_{2}\,{\omega _{1}}^2+
-      4\,I_{2}\,\sin\left(\mathrm{th}_{2}\right)\,l_{1}\,l_{\mathrm{MCD},2}\,{m_{1}}^2\,m_{2}\,\omega _{1}\,\omega _{2}+
-      2\,I_{2}\,\sin\left(\mathrm{th}_{2}\right)\,l_{1}\,l_{\mathrm{MCD},2}\,{m_{1}}^2\,m_{2}\,{\omega _{2}}^2
+      2\,I_{2}\,\sin\left(\theta_2\right)\,\ell_{1}\,L_2\,{m_{1}}^2\,m_{2}\,{\omega _{1}}^2+
+      4\,I_{2}\,\sin\left(\theta_2\right)\,\ell_{1}\,L_2\,{m_{1}}^2\,m_{2}\,\omega _{1}\,\omega _{2}+
+      2\,I_{2}\,\sin\left(\theta_2\right)\,\ell_{1}\,L_2\,{m_{1}}^2\,m_{2}\,{\omega _{2}}^2
       \\ & & &+
-      2\,I_{2}\,\sin\left(\mathrm{th}_{2}\right)\,l_{1}\,l_{\mathrm{MCD},2}\,m_{1}\,{m_{2}}^2\,{\omega _{1}}^2+
-      4\,I_{2}\,\sin\left(\mathrm{th}_{2}\right)\,l_{1}\,l_{\mathrm{MCD},2}\,m_{1}\,{m_{2}}^2\,\omega _{1}\,\omega _{2}+
-      2\,I_{2}\,\sin\left(\mathrm{th}_{2}\right)\,l_{1}\,l_{\mathrm{MCD},2}\,m_{1}\,{m_{2}}^2\,{\omega _{2}}^2
+      2\,I_{2}\,\sin\left(\theta_2\right)\,\ell_{1}\,L_2\,m_{1}\,{m_{2}}^2\,{\omega _{1}}^2+
+      4\,I_{2}\,\sin\left(\theta_2\right)\,\ell_{1}\,L_2\,m_{1}\,{m_{2}}^2\,\omega _{1}\,\omega _{2}+
+      2\,I_{2}\,\sin\left(\theta_2\right)\,\ell_{1}\,L_2\,m_{1}\,{m_{2}}^2\,{\omega _{2}}^2
       \\ & & &+
-      \sin\left(2\,\mathrm{th}_{2}\right)\,{l_{\mathrm{MCD},1}}^2\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2\,{\omega _{1}}^2
+      \sin\left(2\,\theta_2\right)\,{L_1}^2\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2\,{\omega _{1}}^2
       \\ & & &-
-      2\,\sin\left(\mathrm{th}_{2}\right)\,l_{\mathrm{MCD},1}\,{l_{\mathrm{MCD},2}}^3\,{m_{1}}^2\,{m_{2}}^2\,{\omega _{1}}^2-
-      4\,\sin\left(\mathrm{th}_{2}\right)\,l_{\mathrm{MCD},1}\,{l_{\mathrm{MCD},2}}^3\,{m_{1}}^2\,{m_{2}}^2\,\omega _{1}\,\omega _{2}-
-      2\,\sin\left(\mathrm{th}_{2}\right)\,l_{\mathrm{MCD},1}\,{l_{\mathrm{MCD},2}}^3\,{m_{1}}^2\,{m_{2}}^2\,{\omega _{2}}^2
+      2\,\sin\left(\theta_2\right)\,L_1\,{L_2}^3\,{m_{1}}^2\,{m_{2}}^2\,{\omega _{1}}^2-
+      4\,\sin\left(\theta_2\right)\,L_1\,{L_2}^3\,{m_{1}}^2\,{m_{2}}^2\,\omega _{1}\,\omega _{2}-
+      2\,\sin\left(\theta_2\right)\,L_1\,{L_2}^3\,{m_{1}}^2\,{m_{2}}^2\,{\omega _{2}}^2
       \\ & & &-
-      2\,I_{2}\,\sin\left(\mathrm{th}_{2}\right)\,l_{\mathrm{MCD},1}\,l_{\mathrm{MCD},2}\,{m_{1}}^2\,m_{2}\,{\omega _{1}}^2-
-      4\,I_{2}\,\sin\left(\mathrm{th}_{2}\right)\,l_{\mathrm{MCD},1}\,l_{\mathrm{MCD},2}\,{m_{1}}^2\,m_{2}\,\omega _{1}\,\omega _{2}-
-      2\,I_{2}\,\sin\left(\mathrm{th}_{2}\right)\,l_{\mathrm{MCD},1}\,l_{\mathrm{MCD},2}\,{m_{1}}^2\,m_{2}\,{\omega _{2}}^2
+      2\,I_{2}\,\sin\left(\theta_2\right)\,L_1\,L_2\,{m_{1}}^2\,m_{2}\,{\omega _{1}}^2-
+      4\,I_{2}\,\sin\left(\theta_2\right)\,L_1\,L_2\,{m_{1}}^2\,m_{2}\,\omega _{1}\,\omega _{2}-
+      2\,I_{2}\,\sin\left(\theta_2\right)\,L_1\,L_2\,{m_{1}}^2\,m_{2}\,{\omega _{2}}^2
       \\ & & &-
-      2\,I_{2}\,\sin\left(\mathrm{th}_{2}\right)\,l_{\mathrm{MCD},1}\,l_{\mathrm{MCD},2}\,m_{1}\,{m_{2}}^2\,{\omega _{1}}^2-
-      4\,I_{2}\,\sin\left(\mathrm{th}_{2}\right)\,l_{\mathrm{MCD},1}\,l_{\mathrm{MCD},2}\,m_{1}\,{m_{2}}^2\,\omega _{1}\,\omega _{2}-
-      2\,I_{2}\,\sin\left(\mathrm{th}_{2}\right)\,l_{\mathrm{MCD},1}\,l_{\mathrm{MCD},2}\,m_{1}\,{m_{2}}^2\,{\omega _{2}}^2
+      2\,I_{2}\,\sin\left(\theta_2\right)\,L_1\,L_2\,m_{1}\,{m_{2}}^2\,{\omega _{1}}^2-
+      4\,I_{2}\,\sin\left(\theta_2\right)\,L_1\,L_2\,m_{1}\,{m_{2}}^2\,\omega _{1}\,\omega _{2}-
+      2\,I_{2}\,\sin\left(\theta_2\right)\,L_1\,L_2\,m_{1}\,{m_{2}}^2\,{\omega _{2}}^2
     \Bigg)
     \\
     & & &\Bigg/ \Bigg(
       2\,I_{1}\,I_{2}\,{m_{1}}^2+
       2\,I_{1}\,I_{2}\,{m_{2}}^2+
-      {l_{1}}^2\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2+
-      {l_{\mathrm{MCD},1}}^2\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2
+      {\ell_{1}}^2\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2+
+      {L_1}^2\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2
       \\ & & &+
-      2\,I_{2}\,{l_{1}}^2\,m_{1}\,{m_{2}}^2+
-      2\,I_{2}\,{l_{1}}^2\,{m_{1}}^2\,m_{2}+
-      2\,I_{1}\,{l_{\mathrm{MCD},2}}^2\,m_{1}\,{m_{2}}^2+
-      2\,I_{1}\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,m_{2}+
-      2\,I_{2}\,{l_{\mathrm{MCD},1}}^2\,m_{1}\,{m_{2}}^2+
-      2\,I_{2}\,{l_{\mathrm{MCD},1}}^2\,{m_{1}}^2\,m_{2}
+      2\,I_{2}\,{\ell_{1}}^2\,m_{1}\,{m_{2}}^2+
+      2\,I_{2}\,{\ell_{1}}^2\,{m_{1}}^2\,m_{2}+
+      2\,I_{1}\,{L_2}^2\,m_{1}\,{m_{2}}^2+
+      2\,I_{1}\,{L_2}^2\,{m_{1}}^2\,m_{2}+
+      2\,I_{2}\,{L_1}^2\,m_{1}\,{m_{2}}^2+
+      2\,I_{2}\,{L_1}^2\,{m_{1}}^2\,m_{2}
       \\ & & &+
       4\,I_{1}\,I_{2}\,m_{1}\,m_{2}-
-      2\,l_{1}\,l_{\mathrm{MCD},1}\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2-
-      4\,I_{2}\,l_{1}\,l_{\mathrm{MCD},1}\,m_{1}\,{m_{2}}^2-
-      4\,I_{2}\,l_{1}\,l_{\mathrm{MCD},1}\,{m_{1}}^2\,m_{2}
+      2\,\ell_{1}\,L_1\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2-
+      4\,I_{2}\,\ell_{1}\,L_1\,m_{1}\,{m_{2}}^2-
+      4\,I_{2}\,\ell_{1}\,L_1\,{m_{1}}^2\,m_{2}
       \\ & & &-
-      {l_{1}}^2\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2\,\cos\left(2\,\mathrm{th}_{2}\right)-
-      {l_{\mathrm{MCD},1}}^2\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2\,\cos\left(2\,\mathrm{th}_{2}\right)+
-      2\,l_{1}\,l_{\mathrm{MCD},1}\,{l_{\mathrm{MCD},2}}^2\,{m_{1}}^2\,{m_{2}}^2\,\cos\left(2\,\mathrm{th}_{2}\right)
+      {\ell_{1}}^2\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2\,\cos\left(2\,\theta_2\right)-
+      {L_1}^2\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2\,\cos\left(2\,\theta_2\right)+
+      2\,\ell_{1}\,L_1\,{L_2}^2\,{m_{1}}^2\,{m_{2}}^2\,\cos\left(2\,\theta_2\right)
     \Bigg)
 \end{align*}
 \normalsize
