[2seg as 1seg] clean

--- a/2seg_as_1seg_length_change/2seg_as_1seg_length_change.tex
+++ b/2seg_as_1seg_length_change/2seg_as_1seg_length_change.tex
@@ -94,7 +94,7 @@ lineskip=-0.5ex
 \end{figure}
 
 ニュートンの運動方程式は
-動径方向、
+動径方向(内向きを正)、
 固定点周りの角運動量変化$\left(\frac{d}{dt}\left(I_O\Omega_{O\rightarrow M}\right)\right)$、
 重心周りの角運動量変化$\left(\frac{d}{dt}\left(I_M\Omega_{O\rightarrow M}\right)\right)$について成り立つ。
 \begin{gather*}
