[2seg as 1seg] fix equation

--- a/2seg_as_1seg_length_change/2seg_as_1seg_length_change.tex
+++ b/2seg_as_1seg_length_change/2seg_as_1seg_length_change.tex
@@ -103,7 +103,7 @@ lineskip=-0.5ex
     \\
     \dot{I}_O \Omega_{O\rightarrow M} + I_O \dot{\Omega}_{O\rightarrow M} = -Mg\cos\Theta_{O\rightarrow M} L_{O\rightarrow M}
     \\
-    \dot{I}_M \Omega_M + I_M \dot{\Omega}_{O\rightarrow M} = F\sin\theta_F
+    \dot{I}_M \Omega_M + I_M \dot{\Omega}_{O\rightarrow M} = F\sin\theta_F L_{O\rightarrow M}
   \end{cases}
 \end{gather*}
 
