[1seg_circle] clean

--- a/1seg_circle/1seg_circle.tex
+++ b/1seg_circle/1seg_circle.tex
@@ -393,7 +393,8 @@ $F_S$を決定する。
 \begin{align}
   \therefore
   F_S\left( \cos^2\theta_S + \frac{I}{I_G}\sin^2\theta_S \right)
-  &= -ML\omega^2 \cos\theta_S + Mg \sin(\underbrace{\Theta_S - \theta_S}_{=\theta_W+\frac{1}{2}\pi})
+  &= -ML\omega^2 \cos\theta_S 
+  + Mg \sin(\underbrace{\Theta_S - \theta_S}_{=\theta_W+\frac{1}{2}\pi=\Theta_W})
   - Mr_{arm}\dot{\theta}_W{}^2
   \label{eq:PB:FS_end}
 \end{align}
