--- a/OmegaOM_vs_Omega12/OmegaOM_vs_Omega12.tex
+++ b/OmegaOM_vs_Omega12/OmegaOM_vs_Omega12.tex
@@ -187,11 +187,11 @@ $\frac{d}{dt}\arctan t = \frac{1}{1+t^2}$であることから、
   L_2
 \end{gather*}
 とすると、
-\begin{gather*}
-  \dot\theta_{O\rightarrow M} = f\left(\ell_1 + \frac{M_1+M_2}{M_1}L_1\right)\dot\theta_2
+\begin{align*}
+  \dot\theta_{O\rightarrow M} &= f\left(\ell_1 + \frac{M_1+M_2}{M_1}L_1\right)\dot\theta_2
   \\
-  \dot\theta_{1\rightarrow 2} = f(\ell_1)\dot\theta_2
-\end{gather*}
+  \dot\theta_{1\rightarrow 2} &= f(\ell_1)\dot\theta_2
+\end{align*}
 と簡潔に書け、
 \begin{gather*}
   \dot\theta_{O\rightarrow M} - \dot\theta_{1\rightarrow 2}
@@ -210,47 +210,51 @@ $A<0$が証明できる。
 \begin{align*}
   f' (x)
   &= \frac{
+    \Biggl[
     \begin{aligned}
-      \cos\theta_2 &\cdot (x{}^2 + 2xL_2\cos\theta_2 + L_2{}^2)
+      \cos\theta_2 &\cdot (x^2 + 2xL_2\cos\theta_2 + L_2{}^2)
       \\
       &- (x\cos\theta_2 + L_2)\cdot (2x + 2L_2\cos\theta_2)
     \end{aligned}
+    \Biggr]
   }{
-    (x{}^2 + 2xL_2\cos\theta_2 + L_2{}^2)^2
+    (x^2 + 2xL_2\cos\theta_2 + L_2{}^2)^2
   }
   L_2
   \\
   \\
   &= \frac{
+    \Biggl[
     \begin{aligned}
-      &x\cos\theta_2 
+      &x^2\cos\theta_2 
       &+& 2xL_2\cos^2\theta_2 
       &&
       &+& L_2{}^2\cos\theta_2
       \\
       -\Big(
-        &2x{}^2\cos\theta_2 
+        &2x^2\cos\theta_2 
         &+& 2xL_2\cos^2\theta_2
         &+& 2xL_2
         &+& 2L_2{}^2\cos\theta_2
       \Big)
     \end{aligned}
+    \Biggr]
   }{
-    (x{}^2 + 2xL_2\cos\theta_2 + L_2{}^2)^2
+    (x^2 + 2xL_2\cos\theta_2 + L_2{}^2)^2
   }
   \\
   \\
-  &=-\frac{
-    x{}^2\cos\theta_2 + 2xL_2 + L_2{}^2\cos\theta_2
+  &=\frac{
+    -x^2\cos\theta_2 - 2xL_2 - L_2{}^2\cos\theta_2
   }{
-    (x{}^2 + 2xL_2\cos\theta_2 + L_2{}^2)^2
+    (x^2 + 2xL_2\cos\theta_2 + L_2{}^2)^2
   }
   \\
   \\
   &= -\frac{
-    \Bigl[(x{}^2 + L_2{}^2)\cos\theta_2 + 2xL_2\Bigr]
+    \Bigl[(x^2 + L_2{}^2)\cos\theta_2 + 2xL_2\Bigr]
   }{
-    (x{}^2 + 2xL_2\cos\theta_2 + L_2{}^2)^2
+    (x^2 + 2xL_2\cos\theta_2 + L_2{}^2)^2
   }
   < 0 \quad (\because \cos\theta_2 > 0, \, x > 0, \, L_2 > 0).
 \end{align*}
