[1seg circle] update text to be easier

--- a/1seg_circle/1seg_circle.tex
+++ b/1seg_circle/1seg_circle.tex
@@ -204,7 +204,9 @@ $\vec{F}_W$と$-\vec{F}_S$は
   +Mr_{arm}\dot{\theta}_W{}^2 \frac{I_G}{I}\sin\theta_S
   \label{eq:PB:Fs_sin}
 \end{align}
-式\ref{eq:PB:L_start},\ref{eq:PB:Fs_sin}を変形して
+式\ref{eq:PB:L_start}に$\sin\theta_S$をかけ、
+式\ref{eq:PB:Fs_sin}に$\cos\theta_S$をかけることで
+$F_S$の項を打ち消す。
 \begin{align*}
   ML\omega^2 \sin\theta_S 
   &= Mg\sin\Theta_S \sin\theta_S
