--- a/1seg_circle/1seg_circle.tex
+++ b/1seg_circle/1seg_circle.tex
@@ -126,7 +126,7 @@ $\vec{F}_W$と$-\vec{F}_S$は
     \begin{minipage}[t]{0.45\textwidth}
       \centering
       \includegraphics[width=1\textwidth]{1seg_F_config_for_FsMa.png}
-      \subcaption{$F_S$と$Ma_{arm}$の係数について考えやすい状況}
+      \subcaption{$F_S$と$Ma_{Arm}$の係数について考えやすい状況}
       \label{1seg_F_config_for_FsMa.png}
     \end{minipage} &
     \begin{minipage}[t]{0.45\textwidth}
@@ -142,19 +142,19 @@ $\vec{F}_W$と$-\vec{F}_S$は
 肩関節の位置は等速度運動をしないから、
 この座標上で物体の運動を考えるときは慣性力を考慮する必要があり、
 運動方程式は
-慣性力を$Ma_{arm}$として
+慣性力を$Ma_{Arm}$として
 \begin{align}
   ML\omega^2 
   &= Mg\sin\Theta_S 
-  &+& Mr_{arm}\ddot{\theta}_W\sin\theta_S 
-  &-& Mr_{arm}\dot{\theta}_W{}^2\cos\theta_S 
+  &+& Mr_{Arm}\ddot{\theta}_W\sin\theta_S 
+  &-& Mr_{Arm}\dot{\theta}_W{}^2\cos\theta_S 
   &- F_S\cos\theta_S
   \label{eq:PB:L_start}
   \\
   I\dot\omega 
   &= -Mg \cdot L\cos\Theta_S
-  &-& Mr_{arm}\ddot{\theta}_W \cdot L \cos\theta_S
-  &-& Mr_{arm}\dot{\theta}_W{}^2 \cdot L \sin\theta_S
+  &-& Mr_{Arm}\ddot{\theta}_W \cdot L \cos\theta_S
+  &-& Mr_{Arm}\dot{\theta}_W{}^2 \cdot L \sin\theta_S
   &
   \label{eq:PB:I_start}
   \\
@@ -168,8 +168,8 @@ $\vec{F}_W$と$-\vec{F}_S$は
   & = I_G \cdot 
   \frac{
     -Mg \cdot L\cos\Theta_S
-    - Mr_{arm}\ddot{\theta}_W \cdot L \cos\theta_S
-    - Mr_{arm}\dot{\theta}_W{}^2 \cdot L \sin\theta_S
+    - Mr_{Arm}\ddot{\theta}_W \cdot L \cos\theta_S
+    - Mr_{Arm}\dot{\theta}_W{}^2 \cdot L \sin\theta_S
   }{I}
   \notag
   \\
@@ -181,8 +181,8 @@ $\vec{F}_W$と$-\vec{F}_S$は
   & = \frac{I_G}{I}
   \Bigl(
     -Mg \cos\Theta_S
-    - Mr_{arm}\ddot{\theta}_W \cos\theta_S
-    - Mr_{arm}\dot{\theta}_W{}^2 \sin\theta_S
+    - Mr_{Arm}\ddot{\theta}_W \cos\theta_S
+    - Mr_{Arm}\dot{\theta}_W{}^2 \sin\theta_S
   \Bigr)
   \notag
   \\
@@ -191,8 +191,8 @@ $\vec{F}_W$と$-\vec{F}_S$は
   & = F_S\sin\theta_S - \frac{I_G}{I}
   \Bigl(
     -Mg \cos\Theta_S
-    - Mr_{arm}\ddot{\theta}_W \cos\theta_S
-    - Mr_{arm}\dot{\theta}_W{}^2 \sin\theta_S
+    - Mr_{Arm}\ddot{\theta}_W \cos\theta_S
+    - Mr_{Arm}\dot{\theta}_W{}^2 \sin\theta_S
   \Bigr)
   \notag
   \\
@@ -200,8 +200,8 @@ $\vec{F}_W$と$-\vec{F}_S$は
   0
   & = F_S\sin\theta_S
   +Mg \frac{I_G}{I}\cos\Theta_S
-  +Mr_{arm}\ddot{\theta}_W \frac{I_G}{I}\cos\theta_S
-  +Mr_{arm}\dot{\theta}_W{}^2 \frac{I_G}{I}\sin\theta_S
+  +Mr_{Arm}\ddot{\theta}_W \frac{I_G}{I}\cos\theta_S
+  +Mr_{Arm}\dot{\theta}_W{}^2 \frac{I_G}{I}\sin\theta_S
   \label{eq:PB:Fs_sin}
 \end{align}
 式\ref{eq:PB:L_start}に$\sin\theta_S$をかけ、
@@ -210,16 +210,16 @@ $F_S$の項を打ち消す。
 \begin{align*}
   ML\omega^2 \sin\theta_S 
   &= Mg\sin\Theta_S \sin\theta_S
-  &+& Mr_{arm}\ddot{\theta}_W\sin^2\theta_S
-  &-& Mr_{arm}\dot{\theta}_W{}^2\cos\theta_S \sin\theta_S
+  &+& Mr_{Arm}\ddot{\theta}_W\sin^2\theta_S
+  &-& Mr_{Arm}\dot{\theta}_W{}^2\cos\theta_S \sin\theta_S
   \notag
   \\
   &&&&&- F_S\cos\theta_S\sin\theta_S
   \\
   0
   &=  Mg\frac{I_G}{I}\cos\Theta_S\cos\theta_S
-  &+& Mr_{arm}\ddot{\theta}_W \frac{I_G}{I}\cos^2\theta_S
-  &+& Mr_{arm}\dot{\theta}_W{}^2 \frac{I_G}{I}\sin\theta_S\cos\theta_S
+  &+& Mr_{Arm}\ddot{\theta}_W \frac{I_G}{I}\cos^2\theta_S
+  &+& Mr_{Arm}\dot{\theta}_W{}^2 \frac{I_G}{I}\sin\theta_S\cos\theta_S
   \notag
   \\
   &&&&&+ F_S\sin\theta_S\cos\theta_S
@@ -228,24 +228,24 @@ $F_S$の項を打ち消す。
 \begin{align*}
   ML\omega^2 \sin\theta_S
   = Mg\left( \sin\Theta_S \sin\theta_S + \frac{I_G}{I}\cos\Theta_S \cos\theta_S \right)
-  & + Mr_{arm}\ddot{\theta}_W\left( \sin^2\theta_S + \frac{I_G}{I}\cos^2\theta_S \right)
+  & + Mr_{Arm}\ddot{\theta}_W\left( \sin^2\theta_S + \frac{I_G}{I}\cos^2\theta_S \right)
   \notag
   \\
-  & - Mr_{arm}\dot{\theta}_W{}^2\cos\theta_S \sin\theta_S\left( 1 - \frac{I_G}{I} \right)
+  & - Mr_{Arm}\dot{\theta}_W{}^2\cos\theta_S \sin\theta_S\left( 1 - \frac{I_G}{I} \right)
 \end{align*}
 \begin{align}
   \Leftrightarrow
-  Mr_{arm}\ddot{\theta}_W\left( \sin^2\theta_S + \frac{I_G}{I}\cos^2\theta_S \right)
+  Mr_{Arm}\ddot{\theta}_W\left( \sin^2\theta_S + \frac{I_G}{I}\cos^2\theta_S \right)
   = ML\omega^2 \sin\theta_S
   &- Mg\left( \sin\Theta_S \sin\theta_S + \frac{I_G}{I}\cos\Theta_S \cos\theta_S \right)
   \notag
   \\
-  &+ Mr_{arm}\dot{\theta}_W{}^2\cos\theta_S \sin\theta_S\left( 1 - \frac{I_G}{I} \right)
+  &+ Mr_{Arm}\dot{\theta}_W{}^2\cos\theta_S \sin\theta_S\left( 1 - \frac{I_G}{I} \right)
   \label{eq:PB:a_arm_end}
 \end{align}
 が分かる。
 $\sin^2\theta_S + \frac{I_G}{I}\cos^2\theta_S > 0$であるから、
-$a_{arm}$の符号は右辺で決まることになる。
+$a_{Arm}$の符号は右辺で決まることになる。
 
 \subsection{胴体と上肢の位置関係と上肢の加速方向}
 
@@ -264,7 +264,7 @@ $a_{arm}$の符号は右辺で決まることになる。
 \begin{enumerate}
   \item $\omega^2$が大きく、向心力ないし遠心力が十分に大きい場合
   \begin{align*}
-    Ma_{arm}\left( \sin^2\theta_S + \frac{I_G}{I}\cos^2\theta_S \right)
+    Ma_{Arm}\left( \sin^2\theta_S + \frac{I_G}{I}\cos^2\theta_S \right)
     \approx ML\omega^2 \sin\theta_S
     \label{eq:PB:a_arm_MLw2}
   \end{align*}
@@ -290,13 +290,13 @@ $a_{arm}$の符号は右辺で決まることになる。
       \begin{minipage}[t]{0.45\textwidth}
         \centering
         \includegraphics[width=1\textwidth]{PN_omega_positive.png}
-        \subcaption{$a_{arm}$が正のケース}
+        \subcaption{$a_{Arm}$が正のケース}
         \label{PN_omega_positive.png}
       \end{minipage} &
       \begin{minipage}[t]{0.45\textwidth}
         \centering
         \includegraphics[width=1\textwidth]{PN_omega_negative.png}
-        \subcaption{$a_{arm}$が負のケース}
+        \subcaption{$a_{Arm}$が負のケース}
         \label{PN_omega_negative.png}
       \end{minipage}
     \end{tabular}
@@ -305,12 +305,12 @@ $a_{arm}$の符号は右辺で決まることになる。
 
   \item $\omega^2$が小さく、向心力ないし遠心力が十分に小さい場合
   \begin{align*}
-    Ma_{arm}\left( \sin^2\theta_S + \frac{I_G}{I}\cos^2\theta_S \right)
+    Ma_{Arm}\left( \sin^2\theta_S + \frac{I_G}{I}\cos^2\theta_S \right)
     \approx 
     &- Mg\left( \sin\Theta_S \sin\theta_S + \frac{I_G}{I}\cos\Theta_S \cos\theta_S \right)  
     \notag
     \\
-    &+ Mr_{arm}\dot{\theta}_W{}^2\cos\theta_S \sin\theta_S\left( 1 - \frac{I_G}{I} \right)
+    &+ Mr_{Arm}\dot{\theta}_W{}^2\cos\theta_S \sin\theta_S\left( 1 - \frac{I_G}{I} \right)
   \end{align*}
   という近似が成り立つ。
 %   という近似が成り立つから、
@@ -334,13 +334,13 @@ $a_{arm}$の符号は右辺で決まることになる。
 %       \begin{minipage}[t]{0.45\textwidth}
 %         \centering
 %         \includegraphics[width=1\textwidth]{PN_horizontal_positive.png}
-%         \subcaption{$a_{arm}$が正のケース}
+%         \subcaption{$a_{Arm}$が正のケース}
 %         \label{PN_horizontal_positive.png}
 %       \end{minipage} &
 %       \begin{minipage}[t]{0.45\textwidth}
 %         \centering
 %         \includegraphics[width=1\textwidth]{PN_horizontal_negative.png}
-%         \subcaption{$a_{arm}$が負のケース}
+%         \subcaption{$a_{Arm}$が負のケース}
 %         \label{PN_horizontal_negative.png}
 %       \end{minipage}
 %     \end{tabular}
@@ -355,16 +355,16 @@ $F_S$を決定する。
 \begin{align}
   & \frac{I}{I_G}F_S\sin\theta_S \cdot L 
   = -Mg \cdot L\cos\Theta_S
-  - Mr_{arm}\ddot{\theta}_W \cdot L \cos\theta_S
-  - Mr_{arm}\dot{\theta}_W{}^2 \cdot L \sin\theta_S
+  - Mr_{Arm}\ddot{\theta}_W \cdot L \cos\theta_S
+  - Mr_{Arm}\dot{\theta}_W{}^2 \cdot L \sin\theta_S
   \\
   & \left( \because L > 0 \right)
   \\
   \Leftrightarrow
   & 0
   = -Mg \cos\Theta_S
-  - Mr_{arm}\ddot{\theta}_W \cos\theta_S
-  - Mr_{arm}\dot{\theta}_W{}^2 \sin\theta_S
+  - Mr_{Arm}\ddot{\theta}_W \cos\theta_S
+  - Mr_{Arm}\dot{\theta}_W{}^2 \sin\theta_S
   - \frac{I}{I_G}F_S\sin\theta_S
   \label{eq:PB:FS_middle}
 \end{align}
@@ -373,16 +373,16 @@ $F_S$を決定する。
   ML\omega^2 \cos\theta_S
   % = Mg\sin\Theta_S\cos\theta_S &+& Ma\sin\theta_S\cos\theta_S &- &F_S\cos^2\theta_S
   &= Mg\sin\Theta_S \cos\theta_S
-  &+& Mr_{arm}\ddot{\theta}_W\sin\theta_S  \cos\theta_S
-  &-& Mr_{arm}\dot{\theta}_W{}^2\cos^2\theta_S 
+  &+& Mr_{Arm}\ddot{\theta}_W\sin\theta_S  \cos\theta_S
+  &-& Mr_{Arm}\dot{\theta}_W{}^2\cos^2\theta_S 
   \notag
   \\
   &&&&& - F_S\cos\theta_S
   \\
   0 
   &= -Mg \cos\Theta_S \sin\theta_S
-  &-& Mr_{arm}\ddot{\theta}_W \cos\theta_S \sin\theta_S
-  &-& Mr_{arm}\dot{\theta}_W{}^2 \sin^2\theta_S
+  &-& Mr_{Arm}\ddot{\theta}_W \cos\theta_S \sin\theta_S
+  &-& Mr_{Arm}\dot{\theta}_W{}^2 \sin^2\theta_S
   \notag
   \\
   &&&&& - \frac{I}{I_G}F_S\sin^2\theta_S
@@ -391,7 +391,7 @@ $F_S$を決定する。
 \begin{align*}
   ML\omega^2 \cos\theta_S 
   = Mg\left( \sin\Theta_S \cos\theta_S - \cos\Theta_S \sin\theta_S\right)
-  &- Mr_{arm}\dot{\theta}_W{}^2
+  &- Mr_{Arm}\dot{\theta}_W{}^2
   \notag
   \\
   &- F_S\left( \cos^2\theta_S + \frac{I}{I_G}\sin^2\theta_S \right)
@@ -401,7 +401,7 @@ $F_S$を決定する。
   F_S\left( \cos^2\theta_S + \frac{I}{I_G}\sin^2\theta_S \right)
   &= -ML\omega^2 \cos\theta_S 
   + Mg \sin(\underbrace{\Theta_S - \theta_S}_{=\theta_W+\frac{1}{2}\pi=\Theta_W})
-  - Mr_{arm}\dot{\theta}_W{}^2
+  - Mr_{Arm}\dot{\theta}_W{}^2
   \label{eq:PB:FS_end}
 \end{align}
 が分かる。
